--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/G-nava/ourannounce/issues"
   },
-  "homepage": "https://github.com/G-nava/ourannounce#readme"
+  "homepage": "https://github.com/G-nava/ourannounce#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
