--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/G-nava/ourannounce#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "netlify": "^13.1.0",
     "netlify-lambda": "^2.0.15",
     "serverless-http": "^3.1.1"
   }
