--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch --update src/style/sass/main.scss:public/style/css/main.css",
+    "sass": "sass --watch --update src/style/sass/main.scss:src/style/css/main.css",
     "start": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
