--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/G-nava/ourannounce#readme",
   "dependencies": {
+    "axios": "^1.3.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   }
