--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,25 @@
     from = "/*"
     to   = "asistencia.html"
     status = 200
+
+[[redirects]]
+    from = "/index.js"
+    to   = "404.html"
+
+
+[[redirects]]
+    from = "/src/*"
+    to   = "404.html"
+    status = 404
+
+
+[[redirects]]
+    from = "/src/scripts/*"
+    to   = "404.html"
+    status = 404
+
+
+[[redirects]]
+    from = "/src/scripts/index.js"
+    to   = "404.html"
+    status = 404
